generated/checkers/refine/KN-Integer-Overflow-768f17fd-0/build_logs/syntax-repair-refine-2-1/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static bool {anonymous}::SAGenTestChecker::computeExprUpperBound(const clang::Expr*, clang::ento::CheckerContext&, llvm::APSInt&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:394:44: error: conversion from ‘uint64_t’ {aka ‘long unsigned int’} to non-scalar type ‘llvm::APInt’ requested
  394 |           llvm::APInt Tmp = L2.getZExtValue();
      |                             ~~~~~~~~~~~~~~~^~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static llvm::APInt {anonymous}::SAGenTestChecker::computeForcedOneMask(const clang::Expr*, clang::ento::CheckerContext&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:445:47: error: could not convert ‘llvm::APSInt::extOrTrunc(uint32_t) const(64).llvm::APSInt::<anonymous>.llvm::APInt::getZExtValue()’ from ‘uint64_t’ {aka ‘long unsigned int’} to ‘llvm::APInt’
  445 |       return Exact.extOrTrunc(64).getZExtValue();
      |              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
      |                                               |
      |                                               uint64_t {aka long unsigned int}
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:480:65: error: conversion from ‘uint64_t’ {aka ‘long unsigned int’} to non-scalar type ‘llvm::APInt’ requested
  480 |           llvm::APInt RMask = RConst.extOrTrunc(64).getZExtValue();
      |                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
